2010-05-02  Antonello Provenzano  <antonello@deveel.com>
	* StreamFile.cs: removed the use of FSync to adopt the
	FileOptions.WriteThrough construction.
2010-03-09  Antonello Provenzano  <antonello@deveel.com>
	* IStorageSystem.cs: added property StorageType to
	distinguish between a memory based or a file based
	storage system
	
2009-11-25  Antonello Provenzano  <antonello@deveel.com>
	* IStoreSystem.cs: 
		- made public
		- added method 'Init' for the initialization logic
		- inherits from IDisposable interface
	* V1FileStoreSystem.cs:
		- constructor made parameterless
		- implements 'Init' method from IStoreSystem
	
2009-10-17  Antonello Provenzano  <antonello@deveel.com>
	* FSync.cs: classes WindowsFSync, UnixFSync and
	MacOSXFSync moved to this to provide default implementations
	for each platform.
	
﻿2009-10-15  Antonello Provenzano  <antonello@deveel.com>
	* IStoreDataAccessor.cs: IDisposable pattern

2009-10-05  Antonello Provenzano  <antonello@deveel.com>

	* IFSync.cs: added to implement the feature request 2
	* WindowsFSync.cs: default implementation for the Windows
	platform fsync call.
	* FSync.cs: implementation used to control which fsync
	operation to use.
	* StreamFile.cs: commented the call to Flush() method on the
	underlying file-stream in the Synch() method to optimize
	performances
	* IOStoreDataAccessor.cs: commented the call to Flush() method 
	on the underlying file-stream in the Synch() method to optimize
	performances